<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ReservaLabs"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/identificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            />

        <EditText
            android:id="@+id/name_professor"
            android:text=""
            android:layout_width="@dimen/professor_edit_text_width"
            android:layout_height="@dimen/professor_edit_text_height"
            android:inputType="textCapWords"
            android:hint="@string/professor_hint"
            />

        <EditText
            android:id="@+id/siape_professor"
            android:text=""
            android:layout_width="@dimen/professor_edit_text_width"
            android:layout_height="@dimen/professor_edit_text_height"
            android:inputType="number"
            android:hint="@string/siape_hint"
            />

        <EditText
            android:id="@+id/email_professor"
            android:text=""
            android:layout_width="@dimen/professor_edit_text_width"
            android:layout_height="@dimen/professor_edit_text_height"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            />

        <TextView
            android:text="@string/dados_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            />

        <TextView
            android:text="@string/data_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />

        <Button
            android:id="@+id/choose_date_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pick_date"
            android:textAllCaps="false"
            android:onClick="showDatePickerDialog"
            />

        <TextView
            android:text="@string/horario_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />

        <Button
            android:id="@+id/choose_time_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/pick_time"
            android:textAllCaps="false"
            android:onClick="showTimePickerDialog"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/selecione_lab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                />

            <Spinner
                android:id="@+id/lab_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:text="@string/need_for_datashow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/yesForDatashowId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesForDatashow"
                android:onClick="needForDataShow"
                />
            <RadioButton
                android:id="@+id/noForDatashowId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noForDatashow"
                android:onClick="needForDataShow"
                />
            <RadioButton
                android:id="@+id/maybeForDatashowId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maybeForDatashow"
                android:onClick="needForDataShow"
                />
        </RadioGroup>

        <TextView
            android:text="@string/config_desejada_pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />

        <CheckBox
            android:id="@+id/android_sdk"
            android:text="@string/android_studio_sdk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="needForConfigs"
        />

        <CheckBox
            android:id="@+id/java_sdk"
            android:text="@string/java_sdk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="needForConfigs"
            />

        <CheckBox
            android:id="@+id/sistema_linux"
            android:text="@string/linux_os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="needForConfigs"
            />

        <CheckBox
            android:id="@+id/sistema_windows"
            android:text="@string/windows_os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="needForConfigs"
            />

        <TextView
            android:text="@string/reserva_prioritaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />

        <ToggleButton
            android:id="@+id/priority_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/reserva_prioritaria_sim"
            android:textOff="@string/reserva_prioritaria_nao"
        />

        <TextView
            android:text="@string/observacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            />

        <EditText
            android:id="@+id/obs_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="@integer/linhas_para_obs"
            android:maxLength="@integer/tamanho_texto_obs"
        />

        <Button
            android:text="@string/enviar_reserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:onClick="sendEmailImplicit"
        />

    </LinearLayout>

</ScrollView>
